k8s/istio/destinationrule-newsbot.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: newsbot
  namespace: newsbot-prod
spec:
  host: newsbot-newsbot.newsbot-prod.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: newsbot
  namespace: newsbot-staging
spec:
  host: newsbot-newsbot.newsbot-staging.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
